# LGN-mnist-benchmark

./: .gitignore  README.md  load.py  model.py  pyproject.toml  scratchpad_plotcheck.py  scratchpad_smoke.py  train.py
asic_scratch/: emit_sv.py  stages.py  synth.py  viz.py
crazy_scratch/: free_nand.py
crazy_scratch/runs/: ablate_bce_n1.jsonl  ablate_bce_n4.jsonl  f2_s0.jsonl  f2_s1.jsonl  f4_s0.jsonl  f4_s1.jsonl  local_s0.jsonl  local_s1.jsonl  smoke.jsonl  smoke.pt  smoke16.jsonl  smoke16.pt  smoke_local.jsonl  smoke_local.pt  ucen4_s0.jsonl  ucen4_s1.jsonl
docs/: RULES.md
mnistbench/: __init__.py  __main__.py  bench.py  data.py  hw.py  netlist.py  pareto.py  selftest.py  spec.py  synth.py
results/: leaderboard.md  lut_cifar10.pt  metrics.csv
scratch/: IDEAS.md  README.md  ablate_cd.py  analyze.py  backfill.sh  base.env  bits.out  bits.sh  build_artifact.py  cA.out  cA.sh  cB.out  cB.sh  cd.py  cd.sh  compare.py  ensemble.py  fA.out  fA.sh  fB.out  fB.sh  fanin.out  fanin.sh  fit.out  fit.sh  fit_train.py  gate_sweep.out  gate_sweep.sh  grow_conv.py  grow_diffuse.py  grow_lut.py  hp2.out  hp2.sh  hp_search.out  hp_search.sh  kA.out  kA.sh  kB.out  kB.sh  merge.py  (+14 more)
scratch/runs/: bp_conn0.jsonl  bp_conn0_s0.jsonl  bp_conn0_s1.jsonl  bp_conn1.jsonl  bp_conn1_s0.jsonl  bp_conn1_s1.jsonl  cd_conn0.jsonl  (+17 more)
scratch_genetic/: dd_plot.py  dd_sweep.sbatch  dp_run.sbatch  features.py  long_d16.sbatch  nand_ga.py  nand_kernels.py  runs_summary.py  scale.py  scale.sbatch  speed_probe.py
tree_scratch/: boost.py  conv_boost.py  dd.py  dd_plot.py  plot.py  popcount.py
(+90 files in other folders)
